--- a/requirements_fixed.txt
+++ b/requirements_fixed.txt
@@ -9,6 +9,7 @@ tiktoken==0.6.0
 langchain==0.1.11
 langchain-community==0.0.25
 faiss-cpu==1.7.4
-huggingface_hub>=0.20.0,<1.0.0
-transformers>=4.35.0
-torch>=2.0.0 
+huggingface_hub>=0.23.0,<1.0.0
+transformers>=4.36.0
+torch>=2.0.0
+requests>=2.31.0 
