--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 openai==1.12.0
 chromadb==0.4.22
-sentence-transformers==2.2.2
+sentence-transformers==2.7.0
 streamlit==1.32.0
 pandas==2.2.1
 numpy==1.26.4
@@ -14,4 +14,6 @@ fastapi==0.110.0
 uvicorn[standard]==0.27.1
 pydantic==2.6.3
 requests==2.31.0
-schedule==1.2.0 
+schedule==1.2.0
+pyodbc
+ 
